Added pinia for state and created new store

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "localforage-cordovasqlitedriver": "^1.8.0",
+    "pinia": "^2.1.6",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
